# MusksUltimateMessageSafe

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
cpp/src/: CMakeLists.txt  main.cpp  musks_ultimate_message_safe.cpp  musks_ultimate_message_safe.h
cpp/test/: CMakeLists.txt  musks_ultimate_message_safe_tests.cpp
haskell/: .gitignore  ChangeLog.md  README.md  package.yaml
haskell/app/: Main  Main.hs
haskell/src/: Lib.hs
haskell/test/: Spec.hs
javascript/: Makefile  musks-ultimate-message-safe.js  package-lock.json  package.json  tests.js
python/: musks_ultimate_message_safe.py  open_safe.py  tests.py
